[gd_scene load_steps=2 format=3 uid="uid://dwe7fkuurfyv2"]

[ext_resource type="Script" uid="uid://ch1odqjexi1vj" path="res://Interfaces/RoomListItem.gd" id="1_cfvg6"]

[node name="RoomListItem" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12
script = ExtResource("1_cfvg6")

[node name="RoomIdLabel" type="Label" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "ABCD"

[node name="RoomRegionLabel" type="Label" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Strasbourg"

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Join"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
